--- a/website/policia/templates/policia/login.html
+++ b/website/policia/templates/policia/login.html
@@ -57,7 +57,7 @@
                                     {% endif %}
 
                                     <label for="login-email">Escriba su email </label>
-                                    <input type="email" id="login-email" name="login-email" class="form-control" maxlength="100" placeholder="Email" dcvalue="">
+                                    <input type="email" id="login-email" name="login-email" class="form-control" maxlength="100" placeholder="Email" dcvalue="" autofocus>
 
                                     <br/>
 
