--- a/website/policia/templates/policia/base.html
+++ b/website/policia/templates/policia/base.html
@@ -222,5 +222,9 @@
         <script src="{% static "policia/js/jquery.app.js" %}"></script>
         <script src="{% static "policia/js/modernizr.min.js" %}"></script>
 
+        <!-- Modal-Effect -->
+        <script src="{% static "policia/plugins/custombox/dist/custombox.min.js" %}"></script>
+        <script src="{% static "policia/plugins/custombox/dist/legacy.min.js" %}"></script>
+
     </body>
     </html>
