--- a/website/policia/static/policia/css/buscar.css
+++ b/website/policia/static/policia/css/buscar.css
@@ -22,7 +22,7 @@ fieldset .radio-inline {
     font-size: 1.5em;
 }
 
-.twitter-name, .twitter-handle, .twitter-location{
+.twitter-name, .twitter-handle, .twitter-location {
     overflow: hidden;
     text-overflow: ellipsis;
 }
@@ -33,4 +33,16 @@ fieldset .radio-inline {
 
 .twitter-number {
     font-size: 1.3em;
+}
+
+textarea {
+    min-width: 100%;
+}
+
+#search-text {
+    min-height: 150px;
+}
+
+#search-card {
+    padding: 30px;
 }
