--- a/website/policia/templates/policia/buscar-similares.html
+++ b/website/policia/templates/policia/buscar-similares.html
@@ -13,74 +13,75 @@
         <div class="card-box">
             <form method="get" action="{% url 'policia:buscarSimilaresAPI' %}" class="form-inline">
                 {% csrf_token %}
-                <fieldset>
 
-                    <div class="form-group">
-                        <label for="search-username">Buscar usuarios similares a:  </label>
-                        <div class="form-group">
-                            <input type="text" class="form-control"
-                                placeholder="@usuario" id="search-username"
-                                name="search-username" maxlength="100" autofocus/>
-                        </div>
+                <div class="row">
+                    <div class="col-md-6 col-lg-5">
+                        <fieldset>
+                                <label for="search-username">Buscar usuarios similares a:  </label>
+                                <div class="form-group">
+                                    <input type="text" class="form-control"
+                                        placeholder="@usuario" id="search-username"
+                                        name="search-username" maxlength="100" autofocus/>
+                                </div>
+                        </fieldset>
+                        <fieldset>
+                                <label for="search-by">Buscar por:  </label>
+                                <br/>
+                                <label class="radio-inline"><input type="radio" name="search-by" value="topic" checked>Temas de los que habla</label>
+                                <label class="radio-inline"><input type="radio" name="search-by" value="semantic">Forma de hablar</label>
+                        </fieldset>
                     </div>
+                    <div class="col-md-6 col-lg-5">
+                        <fieldset>
+                            <div class="form-group">
+                                <label for="search-language">Idioma:  </label>
+                                <select class="form-control" id="search-language" name="search-language">
+                                    <option value="es">ES</option>
+                                    <option value="en">EN</option>
+                                    <option value="ar">AR</option>
+                                    <option value="ru">RU</option>
+                                    <option value="fr">FR</option>
+                                </select>
 
-                    <div class="form-group">
-                        <label for="search-language">Idioma:  </label>
-                        <select class="form-control" id="search-language" name="search-language">
-                            <option value="es">ES</option>
-                            <option value="en">EN</option>
-                            <option value="ar">AR</option>
-                            <option value="ru">RU</option>
-                            <option value="fr">FR</option>
-                        </select>
+                                <label for="search-max">Resultados:  </label>
+                                <input type="number" class="form-control" id="search-max"
+                                    name="search-max" maxlength="5" min="1"
+                                    max="5000" value="100"/>
+                            </div>
+                        </fieldset>
+                        <fieldset>
+
+                                <label for="search-type">Buscar en:  </label>
+                                <br/>
+                                <label class="radio-inline"><input type="radio" name="search-in" value="all" checked>Twitter global</label>
+                                <label class="radio-inline"><input type="radio" name="search-in" value="relations">Comunidad del usuario</label>
+                        </fieldset>
                     </div>
+                    <div class="col-md-12 col-lg-2">
+                        <fieldset>
+                            <div class="form-group">
 
-                    <div class="form-group">
-                        <label for="search-max">Máximo de resultados:  </label>
-                        <input type="number" class="form-control" id="search-max"
-                            name="search-max" maxlength="5" value="100"/>
+                                <label for="search-button" class="form-control btn btn-primary">
+                                    <i class="md md-search"></i> Buscar similares
+                                </label>
+                                <input id="search-button" name="search-button" class="hidden" type="submit" value="Buscar"/>
+
+                            </div>
+                        </fieldset>
                     </div>
-
-                    <div class="form-group">
-
-                        <!-- Use label as fake button to add icon -->
-                        <label for="search-button" class="form-control btn btn-primary">
-                            <i class="md md-search"></i> Buscar
-                        </label>
-                        <input id="search-button" name="search-button" class="hidden" type="submit" value="Buscar"/>
-
-                    </div>
-                </fieldset>
-                <fieldset>
-
-                    <div id="search-by-form-group" class="form-group">
-                        <label for="search-by">Buscar por:  </label>
-                        <br/>
-                        <label class="radio-inline"><input type="radio" name="search-by" value="topic" checked>Temas de los que habla</label>
-                        <label class="radio-inline"><input type="radio" name="search-by" value="semantic">Forma de hablar</label>
-                    </div>
-
-                    <div id="search-type-form-group" class="form-group">
-                        <label for="search-type">Buscar en:  </label>
-                        <br/>
-                        <label class="radio-inline"><input type="radio" name="search-in" value="all" checked>Twitter global</label>
-                        <label class="radio-inline"><input type="radio" name="search-in" value="relations">Comunidad del usuario</label>
-                    </div>
-
-                </fieldset>
-
+                </div><!-- /.row-->
             </form>
-        </div>
-    </div>
+        </div> <!-- /.card-box -->
+    </div> <!-- /col-md-12 -->
 </div> <!-- /search-box -->
 
 <div id="results-box" class="row">
 
     <!-- Template Detalles User Twitter -->
-    <div class="col-md-4 col-sm-6 text-left">
+    <div class="col-sm-6 col-md-6 col-lg-4 text-left">
         <div class="card-box">
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-xs-8 col-xs-offset-2 col-sm-4 col-sm-offset-0 col-md-4 col-lg-4">
                     <a href="#">
                         <img class="img-circle img-responsive" src="https://pbs.twimg.com/profile_images/674751297363550208/SKw6Rg8H_400x400.jpg"/>
                     </a>
@@ -89,7 +90,7 @@
                         <small class="text-uppercase">P. Molins</small>
                     </p>
                 </div>
-                <div class="col-md-8">
+                <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8 row">
                     <a class="twitter-handle" href="#">@p_molins</a>
 
                     <br/>
@@ -101,11 +102,11 @@
                     </small>
 
                     <div class="twitter-stats row">
-                        <div class="col-md-6 text-center">
+                        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 text-center">
                             <div class="twitter-number">112</div>
                             <small>SEGUIDORES</small>
                         </div>
-                        <div class="col-md-6 text-center">
+                        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 text-center">
                             <div class="twitter-number">105</div>
                             <small>SIGUIENDO</small>
                         </div>
