--- a/website/policia/static/policia/css/core.css
+++ b/website/policia/static/policia/css/core.css
@@ -671,7 +671,7 @@ pre {
   font-size: 18px;
   background-color: #00b19d;
   color: #ffffff;
-  text-align: left;
+  text-align: center;
   margin: 0px;
 }
 .custom-modal-text {
