--- a/website/policia/templates/policia/modal-tarea.html
+++ b/website/policia/templates/policia/modal-tarea.html
@@ -1,11 +1,10 @@
 <!-- Modal tareas -->
 <div id="custom-modal" class="modal-demo">
-    <button type="button" class="close" onclick="Custombox.close();">
-        <span>&times;</span><span class="sr-only">Cerrar</span>
-    </button>
+
     <h4 class="custom-modal-title">Tarea añadida a la cola</h4>
+
     <div class="custom-modal-text">
-        Esta tarea tardará unos segundos en completarse.<br/>
+        Esta tarea tardará unos minutos en completarse.<br/>
         ¿Desea recibir una notificación por email cuando finalice?<br/><br/>
         <p>
             <a href="#" class="btn btn-default">Sí</a>
