--- a/website/policia/templates/policia/base.html
+++ b/website/policia/templates/policia/base.html
@@ -8,14 +8,13 @@
 
     <title>Panel de control / {{ titulo }}</title>
 
-    <link href="{% static "policia/css/bootstrap.min.css" %}" rel="stylesheet" type="text/css">
-    <link href="{% static "policia/css/core.css" %}" rel="stylesheet" type="text/css">
-    <link href="{% static "policia/css/icons.css" %}" rel="stylesheet" type="text/css">
-    <link href="{% static "policia/css/components.css" %}" rel="stylesheet" type="text/css">
-    <link href="{% static "policia/css/pages.css" %}" rel="stylesheet" type="text/css">
-    <link href="{% static "policia/css/menu.css" %}" rel="stylesheet" type="text/css">
-    <link href="{% static "policia/css/responsive.css" %}" rel="stylesheet" type="text/css">
-
+    <link href="{% static "policia/css/bootstrap.min.css" %}" rel="stylesheet" type="text/css"/s>
+    <link href="{% static "policia/css/core.css" %}" rel="stylesheet" type="text/css"/>
+    <link href="{% static "policia/css/icons.css" %}" rel="stylesheet" type="text/css"/>
+    <link href="{% static "policia/css/components.css" %}" rel="stylesheet" type="text/css"/>
+    <link href="{% static "policia/css/pages.css" %}" rel="stylesheet" type="text/css"/>
+    <link href="{% static "policia/css/menu.css" %}" rel="stylesheet" type="text/css"/>
+    <link href="{% static "policia/css/responsive.css" %}" rel="stylesheet" type="text/css"/>
     {% block stylesheets %}{% endblock %}
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
