--- a/website/policia/templates/policia/buscar-texto.html
+++ b/website/policia/templates/policia/buscar-texto.html
@@ -31,23 +31,26 @@
 
                         </fieldset>
                     </div>
-                    <div class="col-md-6 col-lg-5">
-                        <fieldset>
-                            <div class="form-group">
-                                <label for="search-language">Idioma:  </label>
-                                <select class="form-control" id="search-language" name="search-language">
-                                    <option value="es">ES</option>
-                                    <option value="en">EN</option>
-                                    <option value="ar">AR</option>
-                                    <option value="ru">RU</option>
-                                    <option value="fr">FR</option>
-                                </select>
+                    <div class="col-md-6 col-lg-6">
+                        <fieldset class="row">
+                                <div class="col-xs-4">
+                                    <label for="search-language">Idioma:  </label>
+                                    <select class="form-control" id="search-language" name="search-language">
+                                        <option value="es">ES</option>
+                                        <option value="en">EN</option>
+                                        <option value="ar">AR</option>
+                                        <option value="ru">RU</option>
+                                        <option value="fr">FR</option>
+                                    </select>
 
-                                <label for="search-max">Resultados:  </label>
-                                <input type="number" class="form-control" id="search-max"
-                                    name="search-max" maxlength="5" min="1"
-                                    max="5000" value="100"/>
-                            </div>
+                                </div>
+                                <div class="col-xs-8">
+                                    <label for="search-max">Máx. Resultados:  </label>
+                                    <input type="number" class="form-control" id="search-max"
+                                        name="search-max" maxlength="5" min="1"
+                                        max="5000" value="100"/>
+
+                                </div>
                         </fieldset>
                         <fieldset>
                                 <label for="search-by">Buscar por:  </label>
@@ -78,80 +81,6 @@
                 </div><!-- /.row-->
             </form>
         </div> <!-- /.card-box -->
-        <!-- cardbox -->
-        <!--<div id="search-card" class="card-box">
-             <form method="post" class="form-inline">
-                {% csrf_token %}
-                <div class="row">
-                    <div class="col-md-6">
-                        <fieldset class="row">
-                            <div  class="col-md-12">
-                                <label for="search-username">Buscar texto:  </label>
-                                <br/>
-                                    <textarea
-                                        class="form-control"
-                                        placeholder="" id="search-text"
-                                        name="search-text" maxlength="100"
-                                        id="search-text" autofocus>
-                                    </textarea>
-                            </div>
-
-                        </fieldset>
-                    </div>
-
-                    <div class="col-md-6">
-                        <fieldset>
-
-                            <div class="form-group">
-                                <label for="search-language">Idioma:  </label>
-                                <select class="form-control" id="search-language" name="search-language">
-                                    <option>ES</option>
-                                    <option>EN</option>
-                                    <option>AR</option>
-                                    <option>RU</option>
-                                    <option>FR</option>
-                                </select>
-                            </div>
-
-                            <div class="form-group">
-                                <label for="search-max">Máximo de resultados:  </label>
-                                <input type="number" class="form-control" id="search-max"
-                                    name="search-max" maxlength="5" value="100"/>
-                            </div>
-
-                            <div class="form-group">
-
-                                <label for="search-button" class="form-control btn btn-primary">
-                                    <i class="md md-search"></i> Buscar
-                                </label>
-                                <input id="search-button" name="search-button" class="hidden" type="submit" value="Buscar"/>
-
-                            </div>
-                        </fieldset>
-                        <fieldset>
-
-                            <div id="search-by-form-group" class="form-group">
-                                <label for="search-by">Buscar por:  </label>
-                                <br/>
-                                <label class="radio-inline"><input type="radio" name="search-by" value="topic" checked>Temas de los que habla</label>
-                                <label class="radio-inline"><input type="radio" name="search-by" value="semantic">Forma de hablar</label>
-                            </div>
-
-                            <div id="search-type-form-group" class="form-group">
-                                <label for="search-type">Buscar en:  </label>
-                                <br/>
-                                <label class="radio-inline"><input type="radio" name="search-type" value="global" checked>Twitter global</label>
-                                <label class="radio-inline"><input type="radio" name="search-type" value="local">Comunidad del usuario</label>
-                            </div>
-
-                        </fieldset>
-
-                    </div>
-
-                </form>
-                </div>
-
-        </div>!--><!-- /cardbox -->
     </div>
 </div> <!-- /search-box -->
 
