Controller notificar taread por email. Integrando AngularJS

--- a/website/policia/templates/policia/base.html
+++ b/website/policia/templates/policia/base.html
@@ -184,5 +184,9 @@
         <script src="{% static "policia/plugins/custombox/dist/custombox.min.js" %}"></script>
         <script src="{% static "policia/plugins/custombox/dist/legacy.min.js" %}"></script>
 
+        <!-- Angular 1.5.0 -->
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.min.js"></script>
+        {% block scripts %}{% endblock %}
+
     </body>
     </html>
